cabal-version:      2.4
name:               json
version:            1.0.0.0
synopsis:           JSON de-/serialization
description:
  This package provides basic functionality for decoding from and
  encoding to JSON (JavaScript Object Notation), as described in
  <https://datatracker.ietf.org/doc/html/rfc8259 RFC 8259>.

category:           Codec, Web
license:            BSD-3-Clause
license-file:       LICENSE
author:             Galois Inc.
maintainer:         Oleksii Divak (frozenwitness@gmail.com)
                  , Iavor S. Diatchki (iavor.diatchki@gmail.com)
Copyright:          (c) 2007-2018 Galois Inc.
build-type:         Simple
extra-doc-files:    CHANGES

source-repository head
  type:     git
  location: https://github.com/GaloisInc/json.git

library
  hs-source-dirs:   src

  exposed-modules:  Codec.Web.JSON.Decode
                    Codec.Web.JSON.Decode.Core
                    Codec.Web.JSON.Decode.Encoding
                    Codec.Web.JSON.Decode.Questionable

                    Codec.Web.JSON.Encode
                    Codec.Web.JSON.Encode.Core

  other-modules:    Codec.Web.JSON.Build.Boolean
                    Codec.Web.JSON.Build.Null
                    Codec.Web.JSON.Build.String
                    Codec.Web.JSON.Build.Time
                    Codec.Web.JSON.Build.UUID

                    Codec.Web.JSON.Decode.Array.Core
                    Codec.Web.JSON.Decode.Array.Elements

                    Codec.Web.JSON.Decode.Object.Core
                    Codec.Web.JSON.Decode.Object.Bounded
                    Codec.Web.JSON.Decode.Object.Linear
                    Codec.Web.JSON.Decode.Object.Plain
                    Codec.Web.JSON.Decode.Stream

                    Codec.Web.JSON.Parse.Array
                    Codec.Web.JSON.Parse.Boolean
                    Codec.Web.JSON.Parse.Knot
                    Codec.Web.JSON.Parse.Null
                    Codec.Web.JSON.Parse.Number
                    Codec.Web.JSON.Parse.Object
                    Codec.Web.JSON.Parse.String
                    Codec.Web.JSON.Parse.Time
                    Codec.Web.JSON.Parse.UUID

                    Data.Attoparsec.Error

                    Data.ByteString.Copy
                    Data.ByteString.Lazy.Copy

                    Data.RadixTree.Char

                    Data.Text.Copy

                    Encoding.Mixed.Error

  ghc-options:      -Wall

  build-depends:    attoparsec    >= 0.13     && < 0.15
                  , base          >= 4.11     && < 5
                  , bytestring    >= 0.11     && < 0.13
                  , containers    >= 0.5.10.2 && < 0.7
                  , primitive     >= 0.7      && < 0.9
                  , selective     >= 0.4      && < 0.8
                  , semigroupoids >= 5        && < 7
                  , scientific    >= 0.3.7    && < 0.4
                  , text          >= 1.2.3    && < 1.3  || >= 2.0 && < 2.1
                  , time          >= 1.6.0.1  && < 1.13
                  , time-compat   >= 1.9.4    && < 1.10
                  , uuid-types    >= 1.0.5    && < 1.1

  default-language: Haskell2010



test-suite conformance
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   test/conformance

  other-modules:    Test.JSON.Decode.Array
                    Test.JSON.Decode.Boolean
                    Test.JSON.Decode.Decoders
                    Test.JSON.Decode.Null
                    Test.JSON.Decode.Number
                    Test.JSON.Decode.Object
                    Test.JSON.Decode.Stream
                    Test.JSON.Decode.String
                    Test.JSON.Decode.Time
                    Test.JSON.Decode.UUID
                    Test.JSON.Decode.Value

                    Test.JSON.Encode.Array
                    Test.JSON.Encode.Boolean
                    Test.JSON.Encode.Null
                    Test.JSON.Encode.Number
                    Test.JSON.Encode.Object
                    Test.JSON.Encode.String
                    Test.JSON.Encode.Time
                    Test.JSON.Encode.UUID

  ghc-options:      -Wall

  build-depends:    base
                  , bytestring
                  , hspec       >= 2 && < 3
                  , json
                  , selective
                  , text
                  , time
                  , time-compat
                  , uuid-types

  default-language: Haskell2010

test-suite radix-tree
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   src
                  , test/radix-tree

  other-modules:    Data.RadixTree.Char

                    Test.RadixTree.Char

  ghc-options:      -Wall

  build-depends:    base
                  , containers
                  , hspec      >= 2 && < 3
                  , primitive

  default-language: Haskell2010
