cabal-version:      2.4
name:               json-pretty
version:            0.1.0.0
synopsis:           JSON pretty printing.
category:           Codec
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleksii Divak
maintainer:         Oleksii Divak <frozenwitness@gmail.com
Copyright:          (c) 2024 Oleksii Divak
build-type: Simple


executable json-pretty
  default-language: Haskell2010

  hs-source-dirs:   app

  main-is:          Main.hs

  build-depends:    base          >= 4.12   && < 5
                  , bytestring    >= 0.10.4 && < 0.13
                  , json          >= 1      && < 1.1
                  , lathe         >= 0.1    && < 0.2

  ghc-options:      -Wall
