cabal-version:      2.4
name:               json-time
version:            0.1.0.0
synopsis:           json + time
description:
  Optional time dependency for the json package.

category:           Codec
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleksii Divak
maintainer:         Oleksii Divak <frozenwitness@gmail.com>
copyright:          (c) Galois, Inc. 2007,
                    (c) Oleksii Divak 2024
extra-doc-files:
  CHANGELOG.md
  README.md


source-repository head
  type:     git
  location: https://github.com/GaloisInc/json.git
  subdir:   json-time


library
  default-language: Haskell2010

  hs-source-dirs:   src

  exposed-modules:  Codec.JSON.Decoder.Time
                    Codec.JSON.Encoder.Time

  build-depends:    base       >= 4.12   && < 5
                  , bytestring >= 0.10.4 && < 0.13
                  , json       >= 1      && < 1.1
                  , lathe      >= 0.1    && < 0.2
                  , lathe-time >= 0.1    && < 0.2
                  , time       >= 1.11   && < 1.15

  ghc-options:      -Wall



test-suite properties
  type:             exitcode-stdio-1.0

  default-language: Haskell2010

  build-depends:    base
                  , bytestring
                  , hspec
                  , json
                  , json-time
                  , time

  main-is:          Main.hs

  hs-source-dirs:   test/properties

  ghc-options:      -Wall
